toml-pretty-deser/compilation_failure_tests/tagged_enum_named.stderr
error: custom attribute panicked
 --> compilation_failure_tests/tagged_enum_named.rs:3:1
  |
3 | #[tpd(tag="kind")]
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Tagged enum variants must have exactly one unnamed field: TagA(InnerType)
